# text_1

./: CMakeLists.txt  README.md
app/: main.c
benchmarkDLL/: benchmark.c  benchmark.h
data/: data  data.txt  data_1.txt  data_2  data_2.txt
include/: common.h  file_reader.h  query_processor.h  ranker.h
indexerDLL/: CMakeLists.txt  common.h  indexer.c  indexer.h
rankerDLL/: CMakeLists.txt  ranker.c  ranker.h
str/: file_reader.c  indexer.c  query_processor.c  ranker.c
